syntax = "proto3";

package user;

service UserGrpcService{

	rpc GetAvailableUsers (GetAvailableUsersRequest) returns (GetAvailableUsersResult);

	rpc GetAvailaleUserById(GetAvailaleUserByIdRequest) returns (GetAvailaleUserByIdResult);
}

message GetAvailableUsersResult{
   repeated UserDtoResponse UserDto = 1;
   int32 PageNumber = 2;
   int32 PageSize = 3;
   int32 TotalPage = 4;
   int32 TotalItem = 5;
}

message GetAvailableUsersRequest {
   int32 PageNumber = 1;
   int32 PageSize = 2;
}

message UserDtoResponse{
	int32 Id = 1;
	string Username = 2;
	string Email = 3;
	double Balance = 4;
	string Phone = 5;
}

message GetAvailaleUserByIdRequest{
	int32 UserId = 1;
}

message GetAvailaleUserByIdResult{
	UserDtoResponse UserDto = 1;
}
